# ChangeLog for media-sound/alsa-utils
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.349 2013/05/02 00:15:14 ssuominen Exp $

  02 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  alsa-utils-1.0.27-r1.ebuild:
  keepdir /usr/share/alsa/ucm to silence this warning (or error):
  ALSA lib parser.c:1266:(uc_mgr_scan_master_configs)

  01 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  alsa-utils-1.0.27-r1.ebuild:
  Call epatch_user wrt #468162 by Doug Goldstein

  01 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  -alsa-utils-1.0.27.ebuild:
  old

*alsa-utils-1.0.27-r1 (01 May 2013)

  01 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  +alsa-utils-1.0.27-r1.ebuild, +files/alsa-utils-1.0.27-alsactl.patch,
  +files/alsa-utils-1.0.27-arecord.patch,
  +files/alsa-utils-1.0.27-service.patch:
  Fix typing error in alsa-restore.service systemd file. Fix missing break to
  the capture loop in arecord. Fix buffer overflow in alsactl wrt #468160 by
  "John"

  01 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  -alsa-utils-1.0.24.2-r1.ebuild, -alsa-utils-1.0.25-r1.ebuild,
  -alsa-utils-1.0.26.ebuild, -alsa-utils-1.0.26-r1.ebuild,
  -alsa-utils-1.0.26-r3.ebuild, -files/alsasound.confd-r3,
  -files/alsasound.initd-r4:
  old

*alsa-utils-1.0.27 (01 May 2013)

  01 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  +alsa-utils-1.0.27.ebuild:
  Version bump.

*alsa-utils-1.0.26-r3 (19 Apr 2013)

  19 Apr 2013; Samuli Suominen <ssuominen@gentoo.org>
  +alsa-utils-1.0.26-r3.ebuild:
  Remove alsaconf utility; doesn't work with depmod from sys-apps/kmod because
  it doesn't generate "modules.pcimap" and "modules.usbmap" files anymore like
  sys-apps/module-init-tools used to wrt #456214

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> alsa-utils-1.0.26-r2.ebuild:
  Stable for ia64, wrt bug #463451

  12 Apr 2013; Jeroen Roovers <jer@gentoo.org> alsa-utils-1.0.26-r2.ebuild: