@@ -12,19 +12,21 @@ AUX alsasound.confd-r4 340 SHA256 d1c55400b701a72dcb8bb85e016b5013fa3eb6a2766ffc
 AUX alsasound.initd-r5 2099 SHA256 daf46bbc4156a82e0c6c7135ee94b31a3dfb6d366fcf3f45e8c842d1348601be SHA512 3b1399afd10551516545677fd6d8ef676e1eaaca5d76580563b9906b2de86854b8afef864b92dead342d41f3c3c342bff1bc6bd704f932677a524ba4e585a405 WHIRLPOOL 862d943d7d0742c00de9e02cff9b3fe159805880b3e0ea70e50c8c449e8b8c1cfa47d26286bd0807840b1f24c9c9c8cbaef890d71dab43644b52105efb2e7fae
 DIST alsa-driver-1.0.25.tar.bz2 3861484 SHA256 d80e219fd410b5bc62f9332e5964acd575cc8a0bcda80fa41d5eebeabde0ebc3 SHA512 51164c5f1c6e40e188be8e544ddc610b56ffb7d696bc925a0a30e6819d6cbd90a7f9f33c379d411d0e7a172a3ed1cf15b59c27654d63db1a9bad2051331d3017 WHIRLPOOL b70a3614baf72cc2762a2b8a65e07af0204c8550aa140aa01f7d5ee998a8cdf54f43600cfb61c2cb4773d55813afd9aef845f4219d955fbf0f3bc085cf003c7d
 DIST alsa-utils-1.0.26.tar.bz2 1134474 SHA256 f85f2a3aa6e78475bbe35b0cad3a8cabb99f45ebc5f37962f2137b8df8b081e7 SHA512 4b288ef2874645ecfd48d855f57e16bd20aa9b72ec1d18d17a0a79924a6c4b37c0045cd7f4d2ceb9005716871bf532200820b60c1efa0461b81a7cd714374b22 WHIRLPOOL 5212c07bc27cb4c14db67df313d2a66daed727e676b93f8420dddb1c4fb28365ce49e92e8ef2879e9ffba7f98dd26201f45e4e650ada20227d4647a045ded196
+DIST alsa-utils-1.0.27.1.tar.bz2 1142802 SHA256 3de65a2fae0ce679027be24cf477935d901038fa8bf7056130ea368e449a9350 SHA512 23f85814cb5904b10289df99aacdb060b98d93697a217fd6628c5adc5ea2fb3db588546f40a4fc794903654e9c67c0d8bb9cf0428a2700b6fe6ccc7b9f71f0c5 WHIRLPOOL 905f20daeb10d7be324ceb3cbcdc05617853790918424d07c831128605a655794d5d9db7faf78021d269654aa7054cda5f74cd7141755ad5ebf4cc7e862216ab
 DIST alsa-utils-1.0.27.tar.bz2 1142833 SHA256 6f76cd77341ceb22949c4fb9d4df145483f56baa899f0621d617b8df96a45aef SHA512 1bcfcce0cee2c9e72458525f8424abab4a0be93bceda0a90f0113be315ff0f1d956309b535bfd0cc9ce70f031718718301e8dc91f2d16cd91b34ebeb95693625 WHIRLPOOL e13a7a57d7dcc2f323dfdc1a9f6976adcb4a038d159ae6a5641eebebbfcc44e7ed2b833f2e7d8f324a28f9daa355f55ff4def7d0d820f61790e40733d8bd1cbe
 EBUILD alsa-utils-1.0.26-r2.ebuild 2350 SHA256 6bc96fce2ba3fad5ced306b691201e267e4f7bcb70ba0e11900db219c9e64927 SHA512 2ccba1fc4444d8626b5811de5b2b3f79b4c28a4cafbbc3a83d5466624b765033092e93e7d59b8377e634bcfc54e38090da7e2ea6c850ee0880395ec80c947f39 WHIRLPOOL d438a717250ed7066342bc797fbeca15276ea29de665cc945297cef54c3399bb4194c2fe9cf38cbe95f83807a0fea0a05fb2dfa99fdadc34834425e2a8f61e97
 EBUILD alsa-utils-1.0.27-r1.ebuild 2566 SHA256 bd253c6a3f3fe9fc2c40fe43a4591ade25288c23bd905d7392c4f761d2fff293 SHA512 431293385759db28071ce26cf53ab302489b3b86a29a034a1270c9dc9b66c98ec97dd7820a1cdf9d0ae71cca10922b8cd458f1bfea9d947ab53c26c903701229 WHIRLPOOL ffe798e244a276711e0e04a7befc7da972c59c1de6e51696d1246b82b6dbbab9e71d6ee924fd06c431b85f1632041efc22449bf9d4ea726fb1f51b6eea597990
-MISC ChangeLog 54070 SHA256 c6af167a93eab4e9646acbbf003309d2961872b4c40549fcc6b479e0c07480f0 SHA512 d7a44a4653409d9f002bda31eea70a9b992700ca7a4268181d171f53101d73785958fc851b6b5759d18889ff2bdd950c7e38bf8db9092e596cc34fdcc68d12ca WHIRLPOOL ba473a6263a68009022b5796b6e10edb3a96893e3602542e37f86807e65575427030df127a8f374cbb86ee26c5910bdddcbbbea28cf1aa0552cf72bda966fde4
+EBUILD alsa-utils-1.0.27.1.ebuild 2422 SHA256 6958bff0ee7665aeb5b3251b56b7121b99f52462b386aed09bf2b8c0a2ba52a8 SHA512 8d315c3200079def30cae5d2b981a3ed86e78b3683a7427564ac8795847c1ab4e3cb19354117bf138914c2c716e4fb63f2cd8669035a2c39ee5cd3ba3dfe1680 WHIRLPOOL 50fd52599546a1a658a13d9b4548e13c0cabd4c4f789e9cf68c005b4b97e54a077dbc1bb08643b5b0493d50c4ed5914e6f2ebb55054ca119bbed2fe876e572e3
+MISC ChangeLog 54360 SHA256 b6766e390798e71ac58aa0625c632f7fe095bdc3f2432011e4b4e194109da46a SHA512 a9381d358d27bfd5a71ee0c0ec72dde21ef83436f57821e7754b8294cd93c0ac88736781f5a3e4ad7c6db42643c0013599f7fd9d7b9dc4a31cfb389051ffebf2 WHIRLPOOL d81a30a3145849c2354ee71ece4eeaeeee4b5eeff66902de9c03a5f24013b0108421f59614888e92444d1f0250ae96a1dcb84fe2864bf6f19ccd7b853cffedf6
 MISC metadata.xml 519 SHA256 c95261699625faf6df725dc2c7468b8464cfb415125711f893ca27fa9f42631c SHA512 0abb84b0570ecc8eaa7cfc61fbc53dba85a7faeee77c3f5e7761ca53596bdcba24015fe51025b4cf1a0e9c7cdd2f56cb4ecfb2ffa5912c782ac6c0bfc14e2c05 WHIRLPOOL 44ad8f3192836559aebf278528b3315e5e85a02854a97893d3a3b910e3e4e1371254e2caaa2171bb0c304afc77e9cbb04c1f5dbde67f053c9c1b580932cf06ab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRga+jAAoJEEdUh39IaPFNiFAH/2mKUOOoBL3ptMflgh+72fb0
-vI7ZdRmdyOjhkLUMuhn1NTDIRvdrGR2R6RIbe5d4gtUKfVZXKRvn+Fb01Wocg9YN
-RZOFKps+EjDjYDKwCfxHo58CDmqC/uFa/rFygtkA4IUz9i43RjT/RUJtzWTw7a2Y
-m1sRjUEajcgcxXB9Vil2MU0P4IjUYpCLd//VZChTgCgN2GvThcL3QbD/PG32p+st
-37N6gPbsB4wXTsy3LCCJUfghsWgeX+xdTLPiC8KR03bjL79W6PR40T26D9ViDoSG
-07y6ZaQCIMyEq5KKqt9+BCHKj+r9uzchSLnVrxiq7OC7yZczYYndt+p2HWtsers=
-=XH5b
+iQEcBAEBCAAGBQJRo2ZLAAoJEEdUh39IaPFNEB4H/3JF3t13PQ6T492syPdHGjOV
+wTMIMwFmtFu484BUZrJGJagZeoaeExZlkCUroUl3dGIjfShQUY+1BRIle2/s9oc8
+nbzL8JdS9JWcpiX9owYzw6rTdR6V0cDA+NoBG9tE91NIRmk7oHkKJ75i/OJSXVa5
+dzlfWRuahzzA+LPMV0H3uEROkdlRhop1DsGCOr5ckXiBi/OzrIuJluO9cQOHyHbh
+xBF5i0HAcz6CnNDhMqLlqAQ55mC+OqY0U8o2GjC39IyYyIqBdNQ7LdRBrMXBYbiV
+KuU33OwJTC9fACyX/jYjaLcC9Bb8i7u4oIy1S7PZljZ3kzQtqKDxgneXPMrD7D0=
+=XtdZ
 -----END PGP SIGNATURE-----
