@@ -1,6 +1,14 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.349 2013/05/02 00:15:14 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.350 2013/05/27 13:59:35 ssuominen Exp $
+
+*alsa-utils-1.0.27.1 (27 May 2013)
+
+  27 May 2013; Samuli Suominen <ssuominen@gentoo.org>
+  +alsa-utils-1.0.27.1.ebuild:
+  Version bump; /lib/udev/rules.d/90-alsa-restore.rules has been removed in
+  favour of the alsasound init script for reliable behavior with separate /var
+  partition.
 
   02 May 2013; Samuli Suominen <ssuominen@gentoo.org>
   alsa-utils-1.0.27-r1.ebuild:
